package v2;

public interface Command {
    /**
     * Execute the command.
     */
    public void execute();
}
