@startuml
'https://plantuml.com/class-diagram

class "Editor" as editor {
    + lstCommand : List<Command>
    + text: String
    + cursor: Int
    + afficher()
}



class "CopyCommand" as copycommand {
    + void execute()

}

class "PasteCommand" as pastecommand {
    + void execute()

}

class "CutCommand" as cutcommand {
    + void execute()

}

abstract "Command" as command {
    + void {abstract}execute()
}





copycommand -up-|> command
pastecommand -up-|> command
cutcommand -up-|> command


copycommand --> editor
cutcommand --> editor
pastecommand --> editor

@enduml
